--- a/views/form.ejs
+++ b/views/form.ejs
@@ -8,12 +8,12 @@
     <h1>Add a new message</h1>
     <form method="POST" action="/new">
         <div>
-            <label for="messageUser">Name:</label>
-            <input type="text" id="messageUser" name="messageUser" required>
+            <label for="username">Name:</label>
+            <input type="text" id="username" name="username" required>
         </div>
         <div>
-            <label for="messageText">Message:</label>
-            <input type="text" id="messageText" name="messageText" required>
+            <label for="text">Message:</label>
+            <input type="text" id="text" name="text" required>
         </div>
     <button type="submit">Submit</button>
     </form>
